<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="RtlHardcoded">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/activity_task_detail_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="0dp"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:theme="@style/AppToolbarStyle">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/activity_task_detail_toolbar_return_action"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:contentDescription="@string/return_title"
                    android:focusable="true"
                    android:padding="8dp"
                    android:rotationY="180"
                    app:srcCompat="@drawable/ic_baseline_arrow_back_24" />

                <TextView
                    android:id="@+id/activity_task_detail_toolbar_title_text"
                    android:layout_width="wrap_content"
                    android:layout_toRightOf="@+id/activity_task_detail_toolbar_remove_action"
                    android:layout_height="match_parent"
                    android:layout_marginRight="8dp"
                    android:layout_toLeftOf="@+id/activity_task_detail_toolbar_return_action"
                    android:gravity="center_vertical|right"
                    android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title" />

                <ImageView
                    android:id="@+id/activity_task_detail_toolbar_remove_action"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="8dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:contentDescription="@string/action_delete_title"
                    android:focusable="true"
                    android:padding="8dp"
                    app:srcCompat="@drawable/ic_baseline_delete_24" />

            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <EditText
        android:id="@+id/activity_task_detail_title_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/title_title"
        android:inputType="text"
        android:lines="1"
        android:maxLines="1"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/activity_task_detail_important_mark_image"
        app:layout_constraintStart_toEndOf="@+id/activity_task_detail_status_checkbox"
        app:layout_constraintTop_toBottomOf="@+id/app_bar" />

    <ImageView
        android:id="@+id/activity_task_detail_important_mark_image"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:contentDescription="@string/mark_as_important_title"
        android:focusable="true"
        android:minHeight="64dp"
        android:padding="2dp"
        app:layout_constraintBottom_toBottomOf="@+id/activity_task_detail_title_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/activity_task_detail_title_text"
        app:srcCompat="@drawable/ic_baseline_star_border_24" />

    <EditText
        android:id="@+id/activity_task_detail_description_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:gravity="top"
        android:hint="@string/description_title"
        android:inputType="text"
        android:minHeight="109dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_task_detail_title_text"
        app:layout_constraintVertical_bias="0.0" />

    <CheckBox
        android:id="@+id/activity_task_detail_status_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/activity_task_detail_title_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/activity_task_detail_title_text" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@id/activity_task_detail_description_text"
        app:layout_constraintEnd_toEndOf="@+id/activity_task_detail_description_text"
        app:layout_constraintStart_toStartOf="@+id/activity_task_detail_description_text" />

</androidx.constraintlayout.widget.ConstraintLayout>